Fixed some spacing issues

--- a/source/stylesheets/_sandwich-page-layout.scss
+++ b/source/stylesheets/_sandwich-page-layout.scss
@@ -92,7 +92,7 @@
     }
 
     h3 {
-      margin-top: 100px;
+      margin-top: 95px;
       color: $color-secondary-alt;
     }
 
