--- a/source/stylesheets/gitlab-ee-standalone.css.scss
+++ b/source/stylesheets/gitlab-ee-standalone.css.scss
@@ -115,6 +115,10 @@ body {
 
 .os-principles {
   .titles {
+    h1 {
+      margin-top: 95px;
+    }
+
     h2 {
       color: $color-gray;
       font-size: 24px;
@@ -125,7 +129,7 @@ body {
 .larger-teams {
   .titles {
     h3 {
-      margin-top: 70px;
+      margin-top: 95px;
     }
   }
 
